--- a/javascripts2.html
+++ b/javascripts2.html
@@ -18,8 +18,8 @@
         <table>
   <tr>
     <th><h2><a href="https://www.khanacademy.org/computer-programming/glantz_bitmoji/4927228458614784">glantz_bitmoji </a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_bitmoji/4927228458614784/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p></th>
-    <td><h2><a href="https://www.khanacademy.org/computer-programming/glantz_racing_bitmoji/4904492965347328">Glantz_racing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_racing_bitmoji/4904492965347328/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
-    <td><h2><a href="https://www.khanacademy.org/computer-programming/glantz_racing_bitmoji/4904492965347328">Glantz_racing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_racing_bitmoji/4904492965347328/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+    <th><h2><a href="https://www.khanacademy.org/computer-programming/glantz_racing_bitmoji/4904492965347328">Glantz_racing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_racing_bitmoji/4904492965347328/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></th>
+    <th><h2><a href="https://www.khanacademy.org/computer-programming/glantz_racing_bitmoji/4904492965347328">Glantz_racing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_racing_bitmoji/4904492965347328/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></th>
  </tr>
 </table>
        
