--- a/javascripts2.html
+++ b/javascripts2.html
@@ -66,7 +66,7 @@
                                                                                                                                  </th>                                                                                                           
          </tr>
                                                                                                                                   <th>
-               <a href="https://www.khanacademy.org/computer-programming/glantz_contacts/5734006939238400">img src"><img src="glantz_tagpic.png"</a>                                                                                                        
+               <a href="https://www.khanacademy.org/computer-programming/glantz_contacts/5734006939238400">img src"glantz_contacts.png"</a>                                                                                                        
                                                                                                                                  </th>                                                                                                           
          </tr>
       </table>
