--- a/javascripts2.html
+++ b/javascripts2.html
@@ -67,7 +67,7 @@
          
                                                                                                                                  
                                                                                                                                   <th>
-               <a href="https://www.khanacademy.org/computer-programming/glantz_contacts/5734006939238400">img src"glantz_contacts.png"</a>                                                                                                        
+               <a href="https://www.khanacademy.org/computer-programming/glantz_contacts/5734006939238400"><img src"glantz_contacts.png"</a>                                                                                                        
                                                                                                                                  </th>                                                                                                           
          </tr>
       </table>
