--- a/javascripts2.html
+++ b/javascripts2.html
@@ -63,12 +63,12 @@
             </th>
             <th>
                <a href="https://www.khanacademy.org/computer-programming/glantz_tag/5035392633978880"><img src="glantz_tagpic.png"</a>                                                                                                        
-                                                                                                                                 </th>                                                                                                           
+            </th>                                                                                                           
          
                                                                                                                                  
-                                                                                                                                  <th>
-               <a href="https://www.khanacademy.org/computer-programming/glantz_contacts/5734006939238400"><img src"glantz_contacts.png"</a>                                                                                                        
-                                                                                                                                 </th>                                                                                                           
+            <th>
+               <a href="https://www.khanacademy.org/computer-programming/glantz_contacts/5734006939238400"><img src="glantz_contacts.png"</a>                                                                                                        
+            </th>                                                                                                           
          </tr>
       </table>
       </div>
