--- a/javascripts2.html
+++ b/javascripts2.html
@@ -63,7 +63,10 @@
                                                                                                                                  
             <th>
                <a href="https://www.khanacademy.org/computer-programming/glantz_contacts/5734006939238400"><img src="glantz_contacts.png" width="400"</a>                                                                                                        
-            </th>                                                                                                           
+            </th>  
+            <th>
+               <a href="https://www.khanacademy.org/computer-programming/glantz_game/5619518260953088"><img src="glantzgame_pic.png" width="400"</a>                                                                                                        
+            </th>  
          </tr>
       </table>
       </div>
