--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
          <td><a href="aboutme2.html"><img src="about.png"></a>
          <td><a href="javascripts2.html"><img src="javascripts.png"></a>
          <td><a href="apps2.html"><img src="apps.png"></a>
-         <td><a href="final_project.png"><img src="apps.png"></a></td>
+         <td><a href="finalProjectButton.png"><img src="apps.png"></a></td>
               </tr>
         </table>
       <h1 id="home-header">Welcome to Ella's Portfolio</h1>
