--- a/finalProjectPage.html
+++ b/finalProjectPage.html
@@ -22,14 +22,14 @@
         </table>
       <h1 id="home-header">Ella's Final Project!</h1>
        
-        <p>For my final Project I created a user freindly app that allows people to explore drawing in a simple way.<br>
-        This app allows mistakes to happen, because an erase button is included! The user has many color options they can use to create their picture.<br>
-        For some people, creative activities are challenging. Therefore, this app includes an option where you can be given a suggestion of what to draw!<br>
-        Likewise, for young children this app can be interatcive because they can recieve positive feedback on their drawings with just on click. Children spend <br>
-        alot of time on devices, so this app allows them to spend their time doing something craetve while also<br>
-        feeling confident in their artistic abilities because they receive feedback! 
-            <br>This is a <strong>great</strong> way for children to spend free time doing something productive. Likewise, a child learning to be confindnet<br>
-            is necessary for future development, and this app can help with that!</p>
+        <p>For my final Project I created a user friendly app that allows people to explore drawing in a simple way.<br>
+        In my app I included an erase button because I wanted people to have the option to alter their picture, 
+        or they can utilize this aspect if they make a mistake. The user has many color options they can use to create their 
+        picture. For some people, creative activities are challenging. Therefore, this app includes an option where you can <br>
+        be given a suggestion of what to draw!<br> Likewise, for young children this app can be an interatcive actvity considering<br>
+        they can recieve positive feedback on their drawings with just one click. The app has the duel benefit of creative time use <br>
+        and growing your child's confindence. This is a <strong>great</strong> way for children to spend free time doing something<br>
+        productive. Likewise, a child's confidence growing and developing is necessary for future development, and this app can help with that!</p>
             <h2 id="finalProject-header"> Draw A Picture!</h2>
         <a href="https://www.khanacademy.org/computer-programming/final-project-draw-real-one/5950600204304384"></a></h2><script src="https://www.khanacademy.org/computer-programming/final-project-draw-real-one/5950600204304384/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
         </div>
