--- a/finalProjectPage.html
+++ b/finalProjectPage.html
@@ -28,8 +28,8 @@
         picture. For some people, creative activities are challenging. Therefore, this app includes an option where you can <br>
         be given a suggestion of what to draw! Likewise, for young children this app can be an interatcive actvity considering<br>
         they can recieve positive feedback on their drawings with just one click. The app has the duel benefit of creative time use <br>
-        and growing your child's confindence. This is a <strong>great</strong> way for children to spend free time doing something<br>
-        productive. Likewise, a child's confidence growing and developing is necessary for future development, and this app can help with that!</p>
+        and growing your child's confindence. This is a <strong>great</strong> way for children to spend free time doing something productive.<br>
+        Likewise, a child's confidence growing and developing is necessary for future development, and this app can help with that!</p>
             <h2 id="finalProject-header"> Draw A Picture!</h2>
         <a href="https://www.khanacademy.org/computer-programming/final-project-draw-real-one/5950600204304384"></a></h2><script src="https://www.khanacademy.org/computer-programming/final-project-draw-real-one/5950600204304384/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
         </div>
